--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,13 +16,18 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.13.0",
     "bcryptjs": "^3.0.2",
+    "cmdk": "^1.1.1",
+    "date-fns": "^4.1.0",
+    "framer-motion": "^12.23.12",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.536.0",
     "next": "15.4.5",
     "next-auth": "^4.24.11",
     "prisma": "^6.13.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
+    "recharts": "^3.1.1",
     "zod": "^4.0.14",
     "zustand": "^5.0.7"
   },
