--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@admin-griffe/ui": "workspace:*",
+    "@auth/prisma-adapter": "^2.10.0",
     "@hookform/resolvers": "^5.2.1",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.13.0",
