--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "build": "tsc",
-    "dev": "nodemon --exec ts-node-dev --esm src/index.ts",
+    "dev": "nodemon --exec tsx src/server.ts",
     "start": "node dist/index.js",
     "test": "jest",
     "test:unit": "jest --testPathPattern=unit",
@@ -20,7 +20,7 @@
     "db:push": "prisma db push",
     "db:migrate": "prisma migrate dev",
     "db:migrate:prod": "prisma migrate deploy",
-    "db:seed": "ts-node-dev --esm src/scripts/seed.ts",
+    "db:seed": "tsx src/scripts/seed.ts",
     "db:setup-audit": "psql $DATABASE_URL -f sql/audit-triggers.sql",
     "db:ping": "ts-node-dev --esm src/scripts/db-ping.ts",
     "audit:verify": "ts-node-dev --esm src/scripts/audit-verify.ts",
@@ -42,44 +42,51 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.3.0",
-    "@prisma/client": "5.10.2",
-    "amqplib": "^0.10.4",
-    "bcrypt": "^5.1.1",
+    "@prisma/client": "6.13.0",
+    "amqplib": "^0.10.8",
+    "bcryptjs": "^3.0.2",
     "bullmq": "^5.4.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "compression": "^1.8.1",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "express": "^4.18.3",
-    "express-rate-limit": "^7.2.0",
-    "helmet": "^7.1.0",
+    "express-rate-limit": "^7.5.1",
+    "helmet": "^7.2.0",
+    "ioredis": "^5.7.0",
     "jsonwebtoken": "^9.0.2",
     "kafkajs": "^2.2.4",
     "mongodb": "^6.5.0",
     "mysql2": "^3.9.2",
     "pg": "^8.11.3",
+    "prisma": "^6.13.0",
     "prom-client": "^15.1.0",
     "redis": "^4.6.13",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
+    "socket.io": "^4.8.1",
     "uuid": "^9.0.1",
-    "winston": "^3.12.0"
+    "winston": "^3.17.0",
+    "zod": "^4.0.14"
   },
   "devDependencies": {
-    "@types/amqplib": "^0.10.5",
-    "@types/bcrypt": "^5.0.2",
+    "@types/amqplib": "^0.10.7",
+    "@types/bcryptjs": "^3.0.0",
+    "@types/compression": "^1.8.1",
     "@types/cors": "^2.8.19",
     "@types/express": "^4.17.21",
+    "@types/express-rate-limit": "^6.0.2",
     "@types/jest": "^29.5.12",
-    "@types/jsonwebtoken": "^9.0.6",
-    "@types/mysql2": "^3.0.0",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20.11.24",
     "@types/pg": "^8.15.5",
+    "@types/socket.io": "^3.0.2",
     "@types/supertest": "^6.0.2",
     "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^7.1.0",
     "@typescript-eslint/parser": "^7.1.0",
-    "dotenv": "^16.4.5",
+    "dotenv": "^16.6.1",
     "eslint": "^8.57.0",
     "jest": "^29.7.0",
     "nodemon": "^3.1.10",
@@ -87,6 +94,7 @@
     "testcontainers": "^10.7.2",
     "ts-jest": "^29.1.2",
     "ts-node-dev": "^2.0.0",
+    "tsx": "^4.20.3",
     "typescript": "^5.3.3"
   }
 }
