--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -42,7 +42,7 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.3.0",
-    "@prisma/client": "6.13.0",
+    "@prisma/client": "^6.13.0",
     "amqplib": "^0.10.8",
     "bcryptjs": "^3.0.2",
     "bullmq": "^5.4.2",
